src/reporter/tests/snapshots/conventional_commits_linter__reporter__tests__test_git_range_json_print_case_1.snap
---
source: src/reporter/tests/mod.rs
expression: reporting

---
[{"commit_hash":"0000000000000000000000000000000000000000","commit_message":"feat()!: yargs-parser now throws on invalid combinations of config\n\n","linting_errors":["NonConventionalCommitsSpecification","EmptyScope"]},{"commit_hash":"1000000000000000000000000000000000000000","commit_message":"doc(webpack):webpack example (#1436)","linting_errors":["NonConventionalCommitsSpecification","NoSpaceAfterColonPrecedingTypeAndScope"]}]
