src/reporter/tests/snapshots/conventional_commits_linter__reporter__tests__test_git_range_json_print_case_2.snap
---
source: src/reporter/tests/mod.rs
expression: reporting

---
[{"commit_hash":"0000000000000000000000000000000000000000","commit_message":"refactor(ts support)!: ship yargs.d.ts (#1671)","linting_errors":["NonConventionalCommitsSpecification"]}]
