src/reporter/tests/snapshots/conventional_commits_linter__reporter__tests__test_stdin_json_print_case_1.snap
---
source: src/reporter/tests/mod.rs
expression: reporting

---
[{"commit_message":"feat()!: yargs-parser now throws on invalid combinations of config\n\n","linting_errors":["NonConventionalCommitsSpecification","EmptyScope"]}]
