src/reporter/tests/snapshots/conventional_commits_linter__reporter__tests__test_stdin_json_print_case_2.snap
---
source: src/reporter/tests/mod.rs
expression: reporting

---
[{"commit_message":"Release 1.0.126","linting_errors":["NonConventionalCommitsSpecification"]}]
