src/reporter/tests/snapshots/conventional_commits_linter__reporter__tests__test_stdin_json_print_case_3.snap
---
source: src/reporter/tests/mod.rs
expression: reporting

---
[{"commit_message":"Merge branch 'fix-ocsp-signer-check' into 'master'","linting_errors":["NonConventionalCommitsSpecification"]}]
