src/reporter/tests/snapshots/conventional_commits_linter__reporter__tests__test_stdin_pretty_print_case_1.snap
---
source: src/reporter/tests/mod.rs
expression: reporting

---
[1;31mMessage[0m - "feat()!: yargs-parser now throws on invalid combinations of config\n\n"
	[1;31mX[0m - Commit title does not comply with the Conventional Commits V1.0.0 specification.
	[1;31mX[0m - Commit title has a scope which is empty.


