src/reporter/tests/snapshots/conventional_commits_linter__reporter__tests__test_stdin_pretty_print_case_2.snap
---
source: src/reporter/tests/mod.rs
expression: reporting

---
[1;31mMessage[0m - "Release 1.0.126"
	[1;31mX[0m - Commit title does not comply with the Conventional Commits V1.0.0 specification.


